--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.11.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "bcryptjs": "^3.0.2",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
